# NiiMes

./: CMakeLists.txt  CMakeUserPresets.json
NiiMes/: CMakeLists.txt  Element.cpp  Element.h  MinMaxException.h  NiiMes.cpp  NiiMes.h  NiiMes.ui  Parameters.cpp  Parameters.h  ValueException.h  main.cpp
